Fixed problem with showing not activated candles and condolences, fixed bugs with test data, fixed minor display issues, changes in mapper and dto, fixed validation problems, changes in display of instruction

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -2,3 +2,4 @@ jakarta.validation.constraints.Size.message=Tekst musi zawierać od {min} do {ma
 jakarta.validation.constraints.NotNull.message=Pole nie może pozostać puste
 jakarta.validation.constraints.NotBlank.message=Pole nie może pozostać puste
 jakarta.validation.constraints.Past.message=Data musi być z przeszłości
+jakarta.validation.constraints.AssertTrue.message=Należy zaznaczyć tę opcję
